@@ -1,3 +1,7 @@
+Wed Jun 19 07:44:31 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* gc.c (rb_objspace::gc_stress): int -> VALUE to store Fixnum object.
+
 Wed Jun 19 07:25:35 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* gc.c (make_deferred): clear flags to T_ZOMBIE.
